# backtest-engine

./: .gitignore  README.md  pyproject.toml
app/: main.py
backtester/: __init__.py  analytics.py  data.py  engine.py  indicators.py  strategy.py
docs/: lixuang2.md  sqian9.md  tao17.md  zimengl4.md
strategies/: mean_reversion.py  sma_crossover.py
tests/: test_analytics.py  test_engine.py  test_indicators.py  test_strategy.py
