[project]
name = "cs222-backtest"
version = "0.1.0"
description = "A quantitative backtesting platform for testing trading strategies"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "yfinance>=0.2",
    "streamlit>=1.30",
    "streamlit-ace>=0.1",
    "plotly>=5.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backtester*", "strategies*", "app*"]

[tool.black]
line-length = 88
target-version = ["py311"]
